# verified-x3dh

./: .gitignore  Cargo.toml  INSTALL.md  README copy.md  README.md  install_x3dh_verification.sh
src/: ad.rs  kdf.rs  properties.rs  state.rs  tests.rs  transcript.rs
tutorial/: X3DH.md  X3DH_Handshake.py
verified_x3dh/: Cargo.toml  INSTALL.md  verify_x3dh
verified_x3dh/examples/: demo_core_handshake.rs
verified_x3dh/src/: demo_inputs.rs  handshake_core.rs  kdf_old.rs  kdf_old2.rs  lib.rs  properties.rs  state.rs  test_helpers.rs  types.rs
